// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modify XML functions askLongString() should return <AskString /> component 1`] = `
<div>
  <form>
    <textarea
      class="textbox focusme"
      name="val"
    >
      defaultValue
    </textarea>
    <div
      class="submitline"
    >
      <input
        type="submit"
        value="OK"
      />
    </div>
  </form>
</div>
`;

exports[`Modify XML functions askPicklist() should return <AskPicklist /> component 1`] = `
<div>
  <div
    class="menu"
  >
    <div
      class="menuItem focusme techno"
    >
      <span
        class="punc"
      >
        "
      </span>
      short
      <span
        class="punc"
      >
        "
      </span>
      <span
        class="explainer"
      >
        short
      </span>
    </div>
    <div
      class="menuItem focusme techno"
    >
      <span
        class="punc"
      >
        "
      </span>
      long
      <span
        class="punc"
      >
        "
      </span>
      <span
        class="explainer"
      >
        long
      </span>
    </div>
  </div>
</div>
`;

exports[`Modify XML functions askString() should return <AskString /> component 1`] = `
<div>
  <form>
    <input
      aria-label="Value"
      class="textbox focusme"
      name="val"
      value="defaultValue"
    />
    <input
      type="submit"
      value="OK"
    />
  </form>
</div>
`;
